tests/fixtures/invalid/bytes_sub_int.py
# Test bytes subtraction (unsupported operator)
x: bytes = b"hello"
y: bytes = b"world"
result: bytes = x - y
